--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <script type="application/ld+json">
 {"@type":"WebSite","url":"/","headline":"À propos","name":"Léo Planche","author":{"@type":"Person","name":"Léo Planche"},"description":"Homepage of Léo Planche","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
-<link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="/feed.xml" title="Fabien Vergnet" /></head>
+<link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="/feed.xml" title="Léo Planche" /></head>
 <body><style>
 .parallax {
   /* The image used */
