--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <b>Contact :</b>
           leoplanche[at]gmail.com
         </div>
-        <div style="width: 180px; display: table-cell; padding-left: 30px; min-width: 150px;"> <img src="assets/moi.jpg" /> </div>
+        <div style="width: 180px; display: table-cell; padding-left: 30px; min-width: 150px;"> <img src="assets/moi.JPG" /> </div>
     </div>
 </div>
 
