--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 <body><style>
 .parallax {
   /* The image used */
-  background-image: url("../assets/cover.jpg");
+  background-image: url("../assets/kupka.jpg");
 
   /* Set a specific height */
-  min-height: 50px; 
+  min-height: 300px; 
 
   /* Create the parallax scrolling effect */
   background-attachment: fixed;
@@ -36,7 +36,7 @@
 <div class="parallax">
 	  <div class="wrapper"><div class="site-title" rel="author" ></div>
 
-  </div>
+ </div>
 </div>
 </header>
 <main class="page-content" aria-label="Content">
@@ -149,7 +149,7 @@
 	<style>
 .bottom {
   /* The image used */
-  background-image: url("../assets/cover.jpg");
+  background-image: url("../assets/kupka.jpg");
 
   /* Set a specific height */
   min-height: 50px; 
