--- a/index.html
+++ b/index.html
@@ -31,10 +31,13 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+.site-title{font-size:48px;font-weight:500;line-height:54px;letter-spacing:-1px;margin-top:150px;float:left;color:white;}
 </style>
+
+
 <header>
 <div class="parallax">
-	  <div class="wrapper"><div class="site-title" rel="author" ></div>
+	  <div class="wrapper"><div class="site-title" rel="author" >Léo Planche</div>
 
  </div>
 </div>
