--- a/index.html
+++ b/index.html
@@ -32,19 +32,26 @@
   background-size: cover;
 }
 .site-title{font-size:48px;font-weight:500;line-height:54px;letter-spacing:-1px;margin-top:150px;float:left;color:white;}
+
+hr.thin {
+   margin-top:-15px
+}
 </style>
 
 
 <header>
 <div class="parallax">
-	  <div class="wrapper"><div class="site-title" rel="author" >Léo Planche</div>
+	 <div class="wrapper"><div class="site-title" rel="author" >Léo Planche</div>
 
  </div>
 </div>
 </header>
 <main class="page-content" aria-label="Content">
-      <div class="wrapper">
-        <h1 id="à-propos">Current Occupation</h1>
+ <div class="wrapper">
+  <h1 id="à-propos">Current Occupation</h1>
+
+<hr class="thin">
+
 
 
 <div style="width: 100%; display: table;">
@@ -55,11 +62,13 @@
           <b>Contact :</b>
           leoplanche[at]gmail.com
         </div>
-        <!-- <div style="width: 180px; display: table-cell; padding-left: 30px; min-width: 150px;"> <img src="assets/moi.jpg" /> </div> -->
+        		<div style="width: 170px; display: table-cell; padding-left: 30px; min-width: 150px;"> <img src="assets/moi.jpg" /> </div> 
     </div>
 </div>
 
+
  <h1 id="PhD">PhD</h1>
+ <hr class="thin">
 
 <div style="width: 100%; display: table;">
     <div style="display: table-row;">
@@ -74,6 +83,7 @@
 
 
 <h1 id="research-topics">Research topics</h1>
+<hr class="thin">
 
 <ul>
   <li>Graph theory and related algorithms</li>
@@ -82,6 +92,7 @@
 </ul>
 
 <h1 id="publications">Publications</h1>
+<hr class="thin">
 
 <ul>
   <li>
@@ -126,6 +137,7 @@
 
 
  <h1 id="teaching">Teaching</h1>
+ <hr class="thin">
  
 <ul class="org-ul">
 			<li>	   <span><strong>2018-2019:</strong> Temporary teaching and research associate at University Paris Diderot, UFR Informatique</li> 
@@ -135,6 +147,7 @@
 				 
 
  <h1 id="miscellaneous">Miscellaneous</h1>
+ <hr class="thin">
  
 <div style="width: 100%; display: table;">
     <div style="display: table-row;">
