--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 }
 .site-title{font-size:48px;font-weight:500;line-height:54px;letter-spacing:-1px;margin-top:150px;float:left;color:white;}
 
-hr.thin {
-   margin-top:-15px
+hr{
+   margin-top:-15px;   
 }
 </style>
 
@@ -50,7 +50,7 @@ hr.thin {
  <div class="wrapper">
   <h1 id="à-propos">Current Occupation</h1>
 
-<hr class="thin">
+<hr>
 
 
 
@@ -68,7 +68,7 @@ hr.thin {
 
 
  <h1 id="PhD">PhD</h1>
- <hr class="thin">
+ <hr>
 
 <div style="width: 100%; display: table;">
     <div style="display: table-row;">
@@ -95,6 +95,14 @@ hr.thin {
 <hr class="thin">
 
 <ul>
+	<li>
+	<div class="publication-title">The Effect of Graph Connectivity on Metastability in a Stochastic System of Spiking Neurons</div>
+                  <div class="publication-authors">M. André, L. Planche. 
+				  <div class="publication-journal">Journal of Stochastic Processes and their Applications (2020)  
+				  [<a href="assets/twores.pdf">pdf</a>] 
+				  </div>                  
+	</li>
+	
   <li>
    <div class="publication-title">Decomposing a Graph into Shortest Paths with Bounded Eccentricity</div>
                   <div class="publication-authors">E. Birmelé, F. de Montgolfier, L. Planche, L. Viennot.</div>
@@ -126,14 +134,6 @@ hr.thin {
 </ul>
 
 
-<p><strong>Preprint</strong></p>
-<ul>
-
-<li>
-  <div class="publication-title">The Effect of Graph Connectivity on Metastability in a Stochastic System of Spiking Neurons</div>
-                  <div class="publication-authors">M. André, L. Planche. (2020)  [<a href="assets/twores.pdf">pdf</a>] </div>                  
-  </li>
-  </ul>
 
 
  <h1 id="teaching">Teaching</h1>
