--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@ hr{
 <div style="width: 100%; display: table;">
     <div style="display: table-row;">
         <div style="display: table-cell; vertical-align: middle;"> 
-		I am currently working as a postdoctoral researcher at the <a href="https://neuromat.numec.prp.usp.br/">NeuroMat Laboratory</a> of the University of Sao Paulo. 
-		The project is about the modelization of neuronal activity via stochastic process on graphs. </br>
+		I am currently working as a postdoctoral researcher at the <a href="https://www.lisn.upsaclay.fr/recherche/departements-et-equipes/science-des-donnees/bioinfo-2/">LISN Laboratory</a> of the Université Paris Saclay. 
+		The current focus is on developing methods for population genetics, especially regarding archaic introgression in ancient and contemporary humans. </br>
           <b>Contact :</b>
           leoplanche[at]gmail.com
         </div>
@@ -89,12 +89,39 @@ hr{
   <li>Graph theory and related algorithms</li>
   <li>Statistics for networks</li>
   <li>Stochastic Processes</li>
+  <li>Methods for bioinformatics</li>
+  <li>Population genomics</li>
+  <li>Archaic introgression and ancient DNA</li>
 </ul>
 
 <h1 id="publications">Publications</h1>
 <hr class="thin">
 
 <ul>
+	<li>
+	<div class="publication-title">Diffusion-based artificial genomes and their usefulness for local ancestry inference</div>
+                  <div class="publication-authors">Antoine Szatkownik, Leo Planche, Maiwen Demeulle, Titouan Chambe, Maria Avila Arcos, Emilia Huerta-Sanchez, Cyril Furtlehner, Guillaume Charpiat, Flora Jay, Burak Yelmen. </div>
+				  <div class="publication-journal">bioRxiv, preprint (2024)  
+				  [<a href="assets/antoine.pdf">pdf</a>] 
+				  </div>                  
+	</li>
+	
+	<li>
+	<div class="publication-title">Selfing Promotes Spread and Introgression of Segregation Distorters in Hermaphroditic Plants</div>
+                  <div class="publication-authors">Hongru Wang, Léo Planche, Vladimir Shchur, Rasmus Nielsen. </div>
+				  <div class="publication-journal">Molecular Biology and Evolution (2024)  
+				  [<a href="assets/selfing.pdf">pdf</a>] 
+				  </div>                  
+	</li>
+	
+	<li>
+	<div class="publication-title">Highly Accurate Method for Detecting Archaic Segments in the Modern Genomes</div>
+                  <div class="publication-authors">Léo Planche, Anna V. Ilina, Vladimir L. Shchur </div>
+				  <div class="publication-journal"> Lobachevskii Journal of Mathematics (2024)  
+				  </div>                  
+	</li>
+	
+	
 	<li>
 	<div class="publication-title">The Effect of Graph Connectivity on Metastability in a Stochastic System of Spiking Neurons</div>
                   <div class="publication-authors">M. André, L. Planche. 
