added git DAIseg

--- a/index.html
+++ b/index.html
@@ -179,7 +179,12 @@ hr{
 <div style="width: 100%; display: table;">
     <div style="display: table-row;">
         <div style="display: table-cell; vertical-align: middle;"> 
-		<span> The code used to handle hub-laminar graphs is available <a title="https://github.com/LeoPlanche/hublam" href="https://github.com/LeoPlanche/hublam" target="_blank">there</a  <br /> 
+		<span> My github is available <a title="https://github.com/LeoPlanche" href="https://github.com/LeoPlanche" target="_blank">there</a  <br />, it contains, among other things:
+		<ul>
+		  <li>The <a title="https://github.com/LeoPlanche/hublam" href="https://github.com/LeoPlanche/hublam" target="_blank">code</a <br /> used to handle hub-laminar graphs</li>
+		  <li> <a title="https://github.com/LeoPlanche/DAIseg" href="https://github.com/LeoPlanche/DAIseg" target="_blank">DAIseg</a <br /> a LAI method to jointly detect multiple archaic and modern admixtures</li>
+		</ul>
+		
 					</span>
         </div>
     </div>
