--- a/index.html
+++ b/index.html
@@ -98,6 +98,15 @@ hr{
 <hr class="thin">
 
 <ul>
+
+	<li>
+	<div class="publication-title">An archaic reference-free method to jointly infer Neanderthal and Denisovan introgressed segments in modern human genomes</div>
+                  <div class="publication-authors">Léo Planche, Anna Ilina, María C. Ávila-Arcos, Flora Jay, Emilia Huerta-Sanchez, Vladimir Shchur.</div>
+				  <div class="publication-journal">bioRxiv, preprint (2025)  
+				  [<a title="https://www.biorxiv.org/content/10.1101/2025.03.17.643330v1" href="https://www.biorxiv.org/content/10.1101/2025.03.17.643330v1" target="_blank">pdf</a  <br />]
+				  </div>                  
+	</li>
+	
 	<li>
 	<div class="publication-title">Diffusion-based artificial genomes and their usefulness for local ancestry inference</div>
                   <div class="publication-authors">Antoine Szatkownik, Leo Planche, Maiwen Demeulle, Titouan Chambe, Maria Avila Arcos, Emilia Huerta-Sanchez, Cyril Furtlehner, Guillaume Charpiat, Flora Jay, Burak Yelmen. </div>
