--- a/index.html
+++ b/index.html
@@ -81,6 +81,17 @@ hr{
 </div>
 
 
+<h1 id="past-occupations">Past occupations</h1>
+<hr class="thin">
+
+<ul>
+  <li>2021-2023: Postdoc at the International Laboratory of Statistical and Computational Genomics led by Vladimir Shchur, HSE, Moscow</li>
+  <li>2020-2021: Postdoc at NeuroMat laboratory, led by Antonio Galves, University of São Paulo</li>
+  <li>2018-2019: ATER (temporary teaching and research fellow), Paris Diderot University</li>
+  <li>2015-2018: PhD at Paris Diderot and Paris Descartes Universities</li>
+
+</ul>
+
 
 <h1 id="research-topics">Research topics</h1>
 <hr class="thin">
