--- a/index.html
+++ b/index.html
@@ -109,7 +109,16 @@ hr{
 <hr class="thin">
 
 <ul>
-
+	
+	<li>
+	<div class="publication-title">An archaic reference-free method to jointly infer Neanderthal and Denisovan introgressed segments in modern human genomes</div>
+                  <div class="publication-authors"> M.R. Capodiferro, L. Planche, E.M. Breslin, L. Ongaro, M.C. Ávila-Arcos, F. Jay, L.M. Cassidy, E. Huerta-Sanchez.</div>
+				  <div class="publication-journal">bioRxiv, preprint (2025)  
+				  [<a title="https://www.biorxiv.org/content/10.1101/2025.07.23.664192v2" href="https://www.biorxiv.org/content/10.1101/2025.07.23.664192v2" target="_blank">pdf</a  <br />]
+				  </div>                  
+	</li>
+	
+	
 	<li>
 	<div class="publication-title">An archaic reference-free method to jointly infer Neanderthal and Denisovan introgressed segments in modern human genomes</div>
                   <div class="publication-authors">Léo Planche, Anna Ilina, María C. Ávila-Arcos, Flora Jay, Emilia Huerta-Sanchez, Vladimir Shchur.</div>
