--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ hr{
 <div style="width: 100%; display: table;">
     <div style="display: table-row;">
         <div style="display: table-cell; vertical-align: middle;"> 
-		I am currently working as a postdoctoral researcher at the <a href="https://www.lisn.upsaclay.fr/recherche/departements-et-equipes/science-des-donnees/bioinfo-2/">LISN Laboratory</a> of the Université Paris Saclay. 
+		I am currently working as a maître de conférences (assistant professor) at the <a href="https://www.lisn.upsaclay.fr/recherche/departements-et-equipes/science-des-donnees/bioinfo-2/">LISN Laboratory</a> of the Université Paris Saclay. 
 		The current focus is on developing methods for population genetics, especially regarding archaic introgression in ancient and contemporary humans. </br>
           <b>Contact :</b>
           leoplanche[at]gmail.com
