--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@ hr{
 <hr class="thin">
 
 <ul>
+  <li>2021-2023: Postdoc at LISN in Flora Jay's team, Université Paris Saclay</li>
   <li>2021-2023: Postdoc at the International Laboratory of Statistical and Computational Genomics led by Vladimir Shchur, HSE, Moscow</li>
   <li>2020-2021: Postdoc at NeuroMat laboratory, led by Antonio Galves, University of São Paulo</li>
   <li>2018-2019: ATER (temporary teaching and research fellow), Paris Diderot University</li>
@@ -111,7 +112,7 @@ hr{
 <ul>
 	
 	<li>
-	<div class="publication-title">An archaic reference-free method to jointly infer Neanderthal and Denisovan introgressed segments in modern human genomes</div>
+	<div class="publication-title">Archaic ancestry inference in imputed ancient human genomes</div>
                   <div class="publication-authors"> M.R. Capodiferro, L. Planche, E.M. Breslin, L. Ongaro, M.C. Ávila-Arcos, F. Jay, L.M. Cassidy, E. Huerta-Sanchez.</div>
 				  <div class="publication-journal">bioRxiv, preprint (2025)  
 				  [<a title="https://www.biorxiv.org/content/10.1101/2025.07.23.664192v2" href="https://www.biorxiv.org/content/10.1101/2025.07.23.664192v2" target="_blank">pdf</a  <br />]
