--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ hr{
 <div style="width: 100%; display: table;">
     <div style="display: table-row;">
         <div style="display: table-cell; vertical-align: middle;"> 
-		I did my PhD in graph theory under the joint supervision of <a href="http://helios.mi.parisdescartes.fr/~ebirmele/">Etienne Birmelé</a>, professor in Applied Mathematics at Université Paris Descartes,
+		I did my PhD in graph theory under the joint supervision of <a href="https://irma.math.unistra.fr/~birmele/">Etienne Birmelé</a>, professor in Applied Mathematics at Université Paris Descartes,
 		and <a href="https://www.irif.fr/users/fm/index">Fabien de Montgolfier</a>, maître de conférences (assistant professor) at Université Paris Diderot. My thesis (in french) is <a href= assets/these.pdf>there</a>.
         
         </div>
